--- a/EjerciciosJavascript/WebContent/Ejercicio01Javascript.html
+++ b/EjerciciosJavascript/WebContent/Ejercicio01Javascript.html
@@ -52,7 +52,8 @@
 		    <input type="button" id="borrar" value="borrar" >
 		  </fieldset>
 	</form>
-	<p id="demo"></p> 
+	
+<!-- 	<p id="demo"></p>  -->
 </section>
 <script type="text/javascript" src="js/EjerciciosJavascript.js"></script>
 </body>
