Pruebas con rama de desarrollo

--- a/EjerciciosJavascript/WebContent/Ejercicio01Javascript.html
+++ b/EjerciciosJavascript/WebContent/Ejercicio01Javascript.html
@@ -26,6 +26,7 @@
 </style>
 </head>
 <body  id="main">
+<!-- Rama de desarrollo -->
 <section>
 	<br>
 	<br>
@@ -54,11 +55,7 @@
 	</form>
 	
 <!-- 	<p id="demo"></p>  -->
-<<<<<<< HEAD
-<!-- commit 4 -->
-=======
-	<!-- Nuevo comentario commmit 3-->
->>>>>>> branch 'master' of https://github.com/cursojava2019/Alumno-8-JoseManuel-.git
+
 </section>
 <script type="text/javascript" src="js/EjerciciosJavascript.js"></script>
 </body>
